Fix compositions overflow (#3047)
apply css updates to allow scrolling in gallery view and fit elements into container

--- a/extensions/compositions/ui/compositions-panel/compositions-panel.module.scss
+++ b/extensions/compositions/ui/compositions-panel/compositions-panel.module.scss
@@ -84,10 +84,6 @@
   }
 }
 
-.composition {
-  padding: 0 8px;
-}
-
 .tabs {
   display: flex;
   align-items: center;
