--- a/extensions/scope/ui/scope.module.scss
+++ b/extensions/scope/ui/scope.module.scss
@@ -14,6 +14,7 @@
   flex: 1 1;
 
   height: 100%;
+  overflow: hidden;
 }
 
 .splitter {
