--- a/extensions/workspace/ui/workspace/workspace.module.scss
+++ b/extensions/workspace/ui/workspace/workspace.module.scss
@@ -17,6 +17,7 @@
   flex: 1 1;
 
   height: 100%;
+  overflow: hidden;
 }
 
 .splitter {
